# BioMetaPrep

./: .gitignore  README.md  pyproject.toml
.github/workflow/: ci.yml
example/: GSE218184_merged_metadata.csv
src/biometaprep/: __main__.py  cli.py
src/biometaprep/normalize/: clean.py  schema.py
src/biometaprep/tests/: test_clean.py
tests/: test_cli_inprogress.py  test_smoke.py
