[project]
name = "biometaprep"
version = "0.1.0"
description = "Automate normalization and validation of public genomics metadata into pipeline-ready sample sheets."
readme = "README.md"
requires-python = ">3.10"
dependencies = [
"pandas>=2.0",
"pydantic>=2.0",
"pyyaml>=6.0",
"typer>=0.12",
"rich>=13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
biometaprep = "biometaprep.cli:app"